--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,14 +10,14 @@
             "request": "launch",
             "reAttach": true,
             "url": "http://localhost:4200",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}/build",
         },
         {
             "name": "Launch Chrome Localhost",
             "type": "chrome",
             "request": "launch",
             "url": "http://localhost:4200",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}/build"
         },
     ]
 }
